# ska-ser-devices

./: .flake8  .gitlab-ci.yml  .pylintrc  .readthedocs.yaml  CHANGELOG  CODEOWNERS  MANIFEST.skao.int  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
docs/src/: conf.py  index.rst
docs/src/api/: index.rst
docs/src/api/client_server/: index.rst
docs/src/guide/: index.rst
src/ska_ser_devices/: __init__.py
src/ska_ser_devices/client_server/: __init__.py  application.py  marshaller.py  tcp.py  telnet.py
tests/: __init__.py
tests/unit/: __init__.py  test_version.py
tests/unit/client_server/: __init__.py  test_client_server.py
